# Changeling

./: pyproject.toml
dnd/: app.py  character.py  conversation.py  download_model.sh  personality_store.py  run_model_mac.sh  try_model.py
scripts/: run_mlflow.sh
sentiment_classifier/: Dockerfile  build_docker_image.sh  cnn.py  job.yaml  pyproject.toml  run_job.sh  train.py
