[tool.poetry]
name = "Changeling"
version = "0.1.0"
description = "Picks up "
authors = ["Your Name <sharan.duggirala94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
mlflow = "^2.11.3"
setuptools = "^69.2.0"
huggingface-hub = "^0.21.4"
transformers = "^4.39.1"
httpx = "^0.27.0"
langchain = "^0.1.13"
streamlit = "^1.32.2"
beautifulsoup4 = "^4.12.3"
wikipedia = "^1.4.0"
chromadb = "^0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
